--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link  href="./resources/css/style.css" type="text/css" rel="stylesheet">
-  <title>Document</title>
+  <title>smartphone project</title>
 </head>
 <body>
   <h1>Discover hidden places in the world around you</h1>
